--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,16 @@
 # DATABASE CONFIGURATION
 # ================================
 ORM_PROVIDER=prisma
-DATABASE_NAME=tallae_dev
-DATABASE_USER=tallae_dev
-DATABASE_PASSWORD=tallae_password_example(https://www.dashlane.com/features/password-generator)
+DATABASE_NAME=yorcela_dev
+DATABASE_USER=yorcela_dev
+DATABASE_PASSWORD=yorcela_password_example(https://www.dashlane.com/features/password-generator)
 DATABASE_HOST=postgres
 DATABASE_PORT=5432
 DATABASE_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
 # DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public
 # DATABASE_PROVIDER="postgresql"
 DATABASE_PROVIDER=sqlite
-DATABASE_URL="file:./prisma/sqlite/prisma/tallae_dev.sqlite.db"
+DATABASE_URL="file:./prisma/sqlite/prisma/yorcela_dev.sqlite.db"
 
 # ================================
 # LOGGING
@@ -25,7 +25,7 @@ LOG_FORMAT=json
 NODE_ENV=development
 PORT=3000
 API_PREFIX=api/v1
-APP_NAME="tallae API"
+APP_NAME="yorcela API"
 APP_VERSION=1.0.0
 APP_URL=http://localhost:3000/
 FRONTEND_URL=http://localhost:4200
@@ -59,7 +59,7 @@ RATE_LIMIT_AUTH_MAX=50
 # EMAIL CONFIGURATION
 # ================================
 EMAIL_PROVIDER=mailhog
-EMAIL_FROM=no-reply@tallae.app
+EMAIL_FROM=no-reply@yorcela.app
 MAILHOG_HOST=mailhog
 MAILHOG_PORT=1025
 MAILHOG_WEB_PORT=8025
@@ -80,4 +80,4 @@ UPLOAD_MAX_SIZE=10485760
 UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,image/webp,application/pdf
 UPLOAD_DEST=./uploads
 
-EMAIL_SUPPORT="bonjour@tallae.app"
+EMAIL_SUPPORT="bonjour@yorcela.app"
