setup readme + cicd

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "// 🧹  CLEAN / RESET ENVIRONNEMENT": "--------------------------",
     "apps:recreate": "pnpm apps:clean && pnpm apps:init",
     "apps:clean": "bash ./tools/scripts/docker-clean.sh",
-    "apps:init": "pnpm dotenv:init && pnpm install && pnpm apps:up && pnpm db:fresh",
+    "apps:init": "pnpm dotenv:init && pnpm install && pnpm apps:start && pnpm db:fresh",
     "apps:start": "sh -lc 'pnpm dc ${NODE_ENV:-development} up'",
     "apps:close": "sh -lc 'pnpm dc ${NODE_ENV:-development} down'",
     "apps:restart": "sh -lc 'pnpm dc ${NODE_ENV:-development} restart'",
@@ -35,6 +35,8 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "test:cov": "cross-env NODE_ENV=test jest --runInBand --no-cache --coverage",
     "test:ci": "pnpm typecheck && pnpm lint && pnpm format:check && pnpm test:cov",
+    "// 🏗️ CI": "--------------------------",
+    "ci:init": "pnpm dotenv:init && pnpm db:fresh",
     "// 🧭  DATABASE (using Prisma ORM)": "--------------------------",
     "db:fresh": "pnpm db:generate && pnpm db:update",
     "db:reset": "pnpm prisma:reset",
