Add CI / CD + change init protocol

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,21 @@
+# PASSWORD GENERATOR : (https://www.dashlane.com/features/password-generator) | (https://jwtsecrets.com)
+
 # ================================
 # DATABASE CONFIGURATION
 # ================================
 ORM_PROVIDER=prisma
-DATABASE_NAME=yorcela_dev
-DATABASE_USER=yorcela_dev
-DATABASE_PASSWORD=yorcela_password_example(https://www.dashlane.com/features/password-generator)
-DATABASE_HOST=postgres
-DATABASE_PORT=5432
-DATABASE_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
-# DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public
-# DATABASE_PROVIDER="postgresql"
+
 DATABASE_PROVIDER=sqlite
 DATABASE_URL="file:./prisma/sqlite/prisma/yorcela_dev.sqlite.db"
+
+# DATABASE_PROVIDER="postgresql"
+# DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public
+# DATABASE_NAME=yorcela_dev
+# DATABASE_USER=yorcela_dev
+# DATABASE_PASSWORD=CHANGE_ME
+# DATABASE_HOST=postgres
+# DATABASE_PORT=5432
+# DATABASE_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
 
 # ================================
 # LOGGING
@@ -28,6 +32,8 @@ API_PREFIX=api/v1
 APP_NAME="yorcela API"
 APP_VERSION=1.0.0
 APP_URL=http://localhost:3000/
+
+# CORS
 FRONTEND_URL=http://localhost:4200
 FRONTEND_REPO_BRANCH=main
 
@@ -38,18 +44,15 @@ APP_DEFAULT_LANGUAGE=fr
 # ================================
 # SECURITY & JWT
 # ================================
-# -> Replace with a strong secret in production
-JWT_SECRET=changeme_jwt_secret_example_please_replace(https://jwtsecrets.com)
+JWT_SECRET=CHANGE_ME
 JWT_ACCESS_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
 JWT_REFRESH_EXPIRES_IN_REMEMBERME=90d
 
-# Password hashing (Argon2id) - lighter for dev/tests
 ARGON2_MEMORY=4096
 ARGON2_ITERATIONS=1
 ARGON2_PARALLELISM=1
 
-# Rate limiting - more permissive for dev
 RATE_LIMIT_TTL=60
 RATE_LIMIT_MAX=1000
 RATE_LIMIT_AUTH_TTL=900
@@ -58,20 +61,22 @@ RATE_LIMIT_AUTH_MAX=50
 # ================================
 # EMAIL CONFIGURATION
 # ================================
+EMAIL_FROM=no-reply@yorcela.com
+EMAIL_SUPPORT=bonjour@yorcela.com
+
 EMAIL_PROVIDER=mailhog
-EMAIL_FROM=no-reply@yorcela.app
+EMAIL_RENDERER=handlebars
+
 MAILHOG_HOST=mailhog
 MAILHOG_PORT=1025
 MAILHOG_WEB_PORT=8025
-EMAIL_RENDERER="handlebars"
 
 # ================================
 # DEVELOPMENT TOOLS
 # ================================
 SWAGGER_ENABLED=true
 SWAGGER_USER=admin
-SWAGGER_PASSWORD=changeme_swagger_password(https://www.dashlane.com/features/password-generator)
-SWAGGER_PATH=swagger
+SWAGGER_PASSWORD=CHANGE_ME
 
 # ================================
 # UPLOADS
@@ -79,5 +84,3 @@ SWAGGER_PATH=swagger
 UPLOAD_MAX_SIZE=10485760
 UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,image/webp,application/pdf
 UPLOAD_DEST=./uploads
-
-EMAIL_SUPPORT="bonjour@yorcela.app"
