--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yorcela-backend",
-  "version": "0.1.0",
-  "description": "yorcela Backend API - NestJS with Clean Architecture",
+  "name": "yorcela-showcase",
+  "version": "1.0.0",
+  "description": "Yorcela Showcase",
   "author": "Alec ROY",
   "license": "UNLICENSED",
   "private": true,
@@ -36,7 +36,8 @@
     "test:cov": "cross-env NODE_ENV=test jest --runInBand --no-cache --coverage",
     "test:ci": "pnpm typecheck && pnpm lint && pnpm format:check && pnpm test:cov",
     "// 🏗️ CI": "--------------------------",
-    "ci:init": "pnpm dotenv:init && pnpm db:fresh",
+    "ci:init": "pnpm install --frozen-lockfile && pnpm dotenv:init && pnpm db:fresh",
+    "ci:test": "cross-env NODE_ENV=ci jest --runInBand --no-cache --coverage",
     "// 🧭  DATABASE (using Prisma ORM)": "--------------------------",
     "db:fresh": "pnpm db:generate && pnpm db:update",
     "db:reset": "pnpm prisma:reset",
