--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 18
           cache: pnpm
 
       - name: Setup pnpm
@@ -30,6 +30,10 @@ jobs:
         with:
           version: 10.19.0
           run_install: false
+          standalone: true
+
+      - name: pnpm version
+        run: pnpm --version
 
       - name: Init env for CI
         run: pnpm ci:init
