--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,18 +19,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: false
+          standalone: true
+          cache: true
+          cache-dependency-path: pnpm-lock.yaml
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: pnpm
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.19.0
-          run_install: false
-          standalone: true
+          cache: 'pnpm'
 
       - name: pnpm version
         run: pnpm --version
