--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,17 +22,16 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10
+          version: 10.19.0
           run_install: false
           standalone: true
-          cache: true
-          cache-dependency-path: pnpm-lock.yaml
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: pnpm version
         run: pnpm --version
